--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -1,3 +1,3 @@
 [service]
-    url = 'http://127.0.0.1:8545'
+    url = ['http://127.0.0.1:8545','http://127.0.0.1:8546','http://127.0.0.1:8547','http://127.0.0.1:8548']
     # chainID = 1234 # if needed
