--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ List logger = [
 dependencies {
     // https://mvnrepository.com/artifact/org.web3j/core
     implementation 'org.web3j:core:4.9.8'
+    implementation 'org.web3j:besu:4.9.8'
 
     implementation ('com.fasterxml.jackson.core:jackson-databind:2.17.0')
     implementation ("org.fisco-bcos:solcJ:${solcJVersion}"){
